# markdown

./: .coveragerc  .gitattributes  .gitignore  .pyspelling.yml  .spell-dict  .travis.yml  CHANGE_LOG.txt  CODE_OF_CONDUCT.md  INSTALL.md  LICENSE  MANIFEST  MANIFEST.in  Motherboards.online  README  README.html  README.md  SECURITY.md  checklinks.sh  checkspelling.sh  doc-requirements.txt  fabfile.py  home_page.txt  makefile  markdown.py  mdx_codehilite.py  mdx_fenced_code.py  mdx_footnotes.py  mdx_headerid.py  mdx_rss.py  mdx_tables.py  mdx_wikilink.py  mkdocs.yml  odt2txt.py  pyproject.toml  regression-tests.py  run-tests.py  setup.cfg  setup.py  sidebar.txt  test-markdown.py  (+4 more)
.github/: pull_request_template.md
.github/workflows/: changelog-enforcer.yml  changelog-validator.yml  changelog.yml  deploy.yml  docs.yml  manual_deploy.yml  process.yml  tox.yml  version_check.yml
MarkdownTest/: MarkdownTest.pl  readme.txt
MarkdownTest/Tests_2004/: Amps and angle encoding.text-res  Auto links.text-out  Backslash escapes.text-res  Blockquotes with code blocks.text-res  Hard-wrapped paragraphs with list-like lines.text-res  Horizontal rules.text-out  Inline HTML (Advanced).text-res  Inline HTML (Simple).text-res  Inline HTML comments.text-out  Links, inline style.text-res  Links, reference style.text-res  Links-in-Headers.text-out  Links-in-Headers.text-res  Literal quotes in titles.text-out  Markdown Documentation - Basics.text-out  Markdown Documentation - Syntax.text-out  Nested blockquotes.text-out  Ordered and unordered lists.text-res  Strong and em together.text-out  Tabs.text-res  Tidyness.text-out  Yuri-Attributes.text  Yuri-Attributes.text-res  Yuri-Attributes.text~  Yuri-Email.text  Yuri-Email.text-out  Yuri-Footnotes.text-out  Yuri-Footnotes.text-res  Yuri-Links-in-Headers.text  Yuri-Links-in-Headers.text-out
docs/: AUTHORS  CHANGE_LOG  INSTALL  MANIFEST  README  README.html  _template.html  authors.md  authors.txt  basic.css  change_log.txt  changelog.md  cli.md  cli.txt  command_line.md  command_line.txt  contributing.md  custom.css  default.css  index.md  index.txt  install.md  install.txt  mkdocstrings.css  reference.md  reference.txt  release-2.0.1.txt  release-2.0.2.txt  release-2.0.txt  release-2.1.0-alpha.md  release-2.1.0-alpha.txt  release-2.1.0.md  release-2.1.0.txt  release-2.1.1.txt  release-2.2.0.txt  release-2.2.1.txt  release-2.3.txt  release-2.4.txt  release-2.5.txt  release-2.6.txt  (+11 more)
docs/change_log/: index.md  release-2.0.md  release-2.1.md  release-2.2.md  release-2.3.md  release-2.4.md  release-2.5.md  release-2.6.md  release-3.0.md  release-3.1.md  release-3.2.md  release-3.3.md  release-3.4.md  release-3.5.md
docs/extensions/: Abbreviations.txt  CodeHilite.txt  Definition_Lists.txt  Fenced_Code_Blocks.txt  HeaderId.txt  ImageLinks.txt  Meta-Data.txt  Tables.txt  Tables_of_Contents.txt  api.md  (+47 more)
markdown/: __init__.py  __main__.py  __meta__.py  __version__.py  blockparser.py  blockprocessors.py  commandline.py  core.py  etree.py  etree_loader.py  exceptions  html4.py  htmlparser.py  inlinepatterns.py  linepreprocessors.py  misc.py  odict.py  pep562.py  postprocessors.py  preprocessors.py  searializers.py  serializers.py  test.py  test_tools.py  treeprocessors.py  util.py
markdown_extensions/: codehilite.py  def_list.py  extra.py  fenced_code.py  footnotes.py  headerid.py  imagelinks.py  legacy.py  meta.py  tables.py  toc.py  wikilink.py  wikilinks.py
mdx/: mdx_codehilite.py  mdx_headerid.py  mdx_imagelinks.py
scripts/: gen_ref_nav.py  griffe_deprecated.py  griffe_extensions.py  pymarkdown.py
test_patch/: original_output.html  output.html  test.py
tests/: __init__.py  footnote.html  footnote.txt  plugins.py  test_apis.py  test_block_level_elements.py  test_extensions.py  test_legacy.py  test_meta.py  test_video.py  util.py  wikilinks.txt
tests2/: README.txt  formater.py  renamer
(+467 files in other folders)
